// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reference-book-detail renders correctly 1`] = `
<div
  className="content css-1m6jcw1-Content"
>
  <div
    className="css-1sz4cbv-DetailViewHeader"
  >
    <button
      className="css-rmd9d0-Button"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-95j2hm-Button"
      >
        <div
          className="css-1lrzij5-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
        <div
          className="css-u7npei-DetailViewHeader"
        >
          reference_books__sub_header_overview
        </div>
      </div>
    </button>
    <div
      className="css-tqo6e0-DetailViewHeader"
    >
      reference_books__sub_header_title
    </div>
    <div
      className="css-16tq2dx-DetailViewHeader"
    >
      <div
        className="css-0"
      >
        <div
          className="css-0"
          id="tooltip_42"
        >
          <button
            className="css-1z0jetr-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              <div
                className="css-kuxry5-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              reference_books__publish_button
            </div>
          </button>
        </div>
        <div
          className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
          role="tooltip"
          style={
            {
              "backgroundColor": "#2e3032",
              "zIndex": 1,
            }
          }
        >
          reference_books__header_button_publish_tooltip
          <div
            className="react-tooltip-arrow styles-module_arrow__K0L3T"
            style={{}}
          />
        </div>
      </div>
      <div
        className="css-17bom2c-OrlyButton"
      >
        <button
          className="css-hnekdl-Button"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="css-95j2hm-Button"
          >
            <div
              className="css-mj8vo1-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="content-container css-122a9gl-Content"
  >
    <div
      className="css-lnqz6j-ReferenceBookDetail"
    >
      <div
        className="css-zsihj7-Card"
      >
        <div
          className="card-header css-15zaw2t-CardHeader"
        >
          <div
            className="css-mv0otu-TableOfContentsContainer"
          >
            <div
              className="css-1f6p2vj-Heading"
            >
              reference_books__table_of_contents
            </div>
          </div>
        </div>
        <div
          className="toc-body css-awggpr-TableOfContentsContainer"
        >
          <div
            className="book-chapters-list css-1n23nny-TableOfContentsContainer"
          >
            <div
              className="css-18xeog2-TableOfContentsContainer"
            >
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="toc-entry-text css-x4fs04-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-scbjzw-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-1k0t96a-Text"
                  >
                    Chapter 1
                  </div>
                </div>
              </div>
              <div
                className="css-fcpgnv-TableOfContentsEntry"
              >
                <div
                  className="toc-entry css-12opz0x-TableOfContentsEntry"
                >
                  <div
                    className="css-1ldtu9f-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                    onClick={[Function]}
                  />
                  <div
                    className="toc-entry-text css-x4fs04-TableOfContentsEntry"
                    onClick={[Function]}
                  >
                    <div
                      className="css-scbjzw-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1k0t96a-Text"
                    >
                      Article 1
                    </div>
                  </div>
                </div>
                <div
                  className="toc-entry css-12opz0x-TableOfContentsEntry"
                >
                  <div
                    className="css-1ldtu9f-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                    onClick={[Function]}
                  />
                  <div
                    className="toc-entry-text css-x4fs04-TableOfContentsEntry"
                    onClick={[Function]}
                  >
                    <div
                      className="css-scbjzw-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1k0t96a-Text"
                    >
                      Article 2
                    </div>
                  </div>
                </div>
                <div
                  className="toc-entry css-12opz0x-TableOfContentsEntry"
                >
                  <div
                    className="css-1ldtu9f-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                    onClick={[Function]}
                  />
                  <div
                    className="toc-entry-text css-x4fs04-TableOfContentsEntry"
                    onClick={[Function]}
                  >
                    <div
                      className="css-scbjzw-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1k0t96a-Text"
                    >
                      Article 3
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="card-footer css-105jaxv-CardFooter"
        >
          <button
            className="css-mdrh0d-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              <div
                className="css-kuxry5-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              reference_books__add_new_article
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-17ma33b-Card"
      >
        <div
          className="card-header css-13nbzsf-CardHeader"
        >
          <div
            className="css-xkg24y-ReferenceBookArticleDetail"
          >
            <div
              className="css-1lrzij5-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
            <div
              className="css-1i6jmor-Heading"
            >
              Venture-Capital
            </div>
          </div>
          <div
            className="css-xuxv3c-ReferenceBookArticleDetail"
          >
            <button
              className="css-1cywa3f-Button"
              disabled={true}
              onClick={[Function]}
            >
              <div
                className="css-95j2hm-Button"
              >
                <div
                  className="css-mj8vo1-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-d9831g-ReferenceBookArticleDetail"
        >
          <div
            className="css-1mcq4xf-Label"
          >
            title
            <div
              className="css-nhflpf-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
          <div
            className="css-17icdby-InlineEditableHeader"
          >
            <div>
              <form
                className="css-1c5ej61-InlineEditableHeader"
                onBlur={[Function]}
                onSubmit={[Function]}
              >
                <div
                  className="css-pl4s5v-InlineEditableHeader"
                  onClick={[Function]}
                >
                  <div
                    className="css-1iwo50k"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-nrul0i"
                    >
                      <input
                        className="css-q6vozw"
                        defaultValue="Venture-Capital"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        readOnly={true}
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    className="hover-icon css-16vb3lw-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </form>
            </div>
          </div>
          <div
            className="css-1mcq4xf-Label"
          >
            description
            <div
              className="css-nhflpf-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
          <div
            className="overlay-edit-field css-0"
          >
            <div
              className="css-1kjt8hf-ReadonlyActionField"
              data-testid="readonly-action-field"
              onClick={[Function]}
            >
              <div
                className="css-1bkess4-ReadonlyActionField"
              />
              <div
                className="content-wrapper css-376q3o-ReadonlyActionField"
              >
                <div
                  className="content css-ci7wec-ReadonlyActionField"
                >
                  <div
                    className="css-1h2eymq-InlineEditableTextarea"
                    onClick={[Function]}
                  >
                    <div
                      className="textarea css-1n5bn12-InlineEditableTextarea"
                      contentEditable={false}
                      suppressContentEditableWarning={true}
                    >
                      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
                    </div>
                    <div
                      className="hover-icon css-1pndqgp-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-8050ac-Heading"
          >
            reference_books__table_of_contents_count
          </div>
          <div
            className="css-zlzr8i-ReferenceBookArticleDetail"
          >
            <div
              className="css-o103be-Table"
            >
              <div
                className="css-v9uh6m-Table"
              >
                <div
                  className="css-fuywjr-Table"
                >
                  <div
                    className="css-1cky3ub-Columns"
                  >
                    <div
                      className="css-zphlsu-Column"
                    >
                      <div
                        className="css-l0jg45-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                    </div>
                    <div
                      className="css-1oiyj7r-Column"
                    >
                      reference_books__article_table_header_article
                    </div>
                  </div>
                </div>
                <div
                  className="css-1u7tfur-Table"
                >
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
                <div
                  className="css-1u7tfur-Table"
                >
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
                <div
                  className="css-1u7tfur-Table"
                >
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
                <div
                  className="css-1u7tfur-Table"
                >
                  <div
                    className="css-l0jg45-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
                <div
                  className="css-r22ndn-Table"
                >
                  <button
                    className="css-1cywa3f-Button"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      className="css-95j2hm-Button"
                    >
                      <div
                        className="css-mj8vo1-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                    </div>
                  </button>
                </div>
                <div
                  className="css-ymzcrw-Table"
                >
                  <button
                    className="css-1cywa3f-Button"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      className="css-95j2hm-Button"
                    >
                      <div
                        className="css-mj8vo1-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                    </div>
                  </button>
                </div>
              </div>
              <div
                className="css-tqgzls-Table"
              >
                <div
                  className="css-1ihrgr1-Table"
                >
                  <div
                    className="entity-row css-s3x2fw-Table"
                    onClick={[Function]}
                  >
                    <div
                      className="css-fuywjr-Table"
                    >
                      <div
                        className="css-1cky3ub-Columns"
                      >
                        <div
                          className="css-zphlsu-Column"
                        >
                          <div
                            className="css-l0jg45-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                        </div>
                        <div
                          className="css-1oiyj7r-Column"
                        >
                          Begriff
                        </div>
                      </div>
                    </div>
                    <div
                      className="css-1u7tfur-Table"
                    >
                      0
                    </div>
                    <div
                      className="css-1u7tfur-Table"
                    >
                      1
                    </div>
                    <div
                      className="css-1u7tfur-Table"
                    >
                      0
                    </div>
                    <div
                      className="css-1u7tfur-Table"
                    >
                      0
                    </div>
                    <div
                      className="css-r22ndn-Table"
                    />
                    <div
                      className="css-ymzcrw-Table"
                    >
                      <div
                        className="css-0"
                      >
                        <button
                          className="css-qsdvj6-Button"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <div
                            className="css-95j2hm-Button"
                          >
                            <div
                              className="css-op5egs-Icon"
                              dangerouslySetInnerHTML={
                                {
                                  "__html": {},
                                }
                              }
                            />
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1ihrgr1-Table"
                >
                  <div
                    className="entity-row css-s3x2fw-Table"
                    onClick={[Function]}
                  >
                    <div
                      className="css-fuywjr-Table"
                    >
                      <div
                        className="css-1cky3ub-Columns"
                      >
                        <div
                          className="css-zphlsu-Column"
                        >
                          <div
                            className="css-l0jg45-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                        </div>
                        <div
                          className="css-1oiyj7r-Column"
                        >
                          ertragspotenziale und Risiken von Venture-Capital-Finanzierungen
                        </div>
                      </div>
                    </div>
                    <div
                      className="css-1u7tfur-Table"
                    >
                      0
                    </div>
                    <div
                      className="css-1u7tfur-Table"
                    >
                      4
                    </div>
                    <div
                      className="css-1u7tfur-Table"
                    >
                      0
                    </div>
                    <div
                      className="css-1u7tfur-Table"
                    >
                      0
                    </div>
                    <div
                      className="css-r22ndn-Table"
                    />
                    <div
                      className="css-ymzcrw-Table"
                    >
                      <div
                        className="css-0"
                      >
                        <button
                          className="css-qsdvj6-Button"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <div
                            className="css-95j2hm-Button"
                          >
                            <div
                              className="css-op5egs-Icon"
                              dangerouslySetInnerHTML={
                                {
                                  "__html": {},
                                }
                              }
                            />
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="bottom-action-bar css-1004l4i-ContentBottomActionbar"
  >
    <div
      className="css-1sy51zr-ReferenceBookDetailFooter"
    >
      <div>
        <div
          className="css-ttw7rt-ReferenceBookDetailFooter"
        >
          <div
            className="css-1lrzij5-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
          <div
            className="css-111vsyq-Text"
          >
            21.07.2020
          </div>
          <div
            className="css-1lrzij5-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
          <div
            className="css-fmthw-Text"
          >
            First Last
          </div>
        </div>
      </div>
      <button
        className="css-injsqh-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          preview
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`reference-book-detail renders correctly with selected article 1`] = `
<div
  className="content css-1m6jcw1-Content"
>
  <div
    className="css-1sz4cbv-DetailViewHeader"
  >
    <button
      className="css-rmd9d0-Button"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-95j2hm-Button"
      >
        <div
          className="css-1lrzij5-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
        <div
          className="css-u7npei-DetailViewHeader"
        >
          reference_books__sub_header_overview
        </div>
      </div>
    </button>
    <div
      className="css-tqo6e0-DetailViewHeader"
    >
      reference_books__sub_header_title
    </div>
    <div
      className="css-16tq2dx-DetailViewHeader"
    >
      <div
        className="css-0"
      >
        <div
          className="css-0"
          id="tooltip_42"
        >
          <button
            className="css-1z0jetr-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              <div
                className="css-kuxry5-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              reference_books__publish_button
            </div>
          </button>
        </div>
        <div
          className="react-tooltip styles-module_tooltip__mnnfp styles-module_dark__xNqje css-10zyuev-Tooltip"
          role="tooltip"
          style={
            {
              "backgroundColor": "#2e3032",
              "zIndex": 1,
            }
          }
        >
          reference_books__header_button_publish_tooltip
          <div
            className="react-tooltip-arrow styles-module_arrow__K0L3T"
            style={{}}
          />
        </div>
      </div>
      <div
        className="css-17bom2c-OrlyButton"
      >
        <button
          className="css-hnekdl-Button"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="css-95j2hm-Button"
          >
            <div
              className="css-mj8vo1-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="content-container css-122a9gl-Content"
  >
    <div
      className="css-lnqz6j-ReferenceBookDetail"
    >
      <div
        className="css-zsihj7-Card"
      >
        <div
          className="card-header css-15zaw2t-CardHeader"
        >
          <div
            className="css-mv0otu-TableOfContentsContainer"
          >
            <div
              className="css-1f6p2vj-Heading"
            >
              reference_books__table_of_contents
            </div>
          </div>
        </div>
        <div
          className="toc-body css-awggpr-TableOfContentsContainer"
        >
          <div
            className="book-chapters-list css-1n23nny-TableOfContentsContainer"
          >
            <div
              className="css-18xeog2-TableOfContentsContainer"
            >
              <div
                className="toc-entry css-12opz0x-TableOfContentsEntry"
              >
                <div
                  className="toc-entry-text css-x4fs04-TableOfContentsEntry"
                  onClick={[Function]}
                >
                  <div
                    className="css-scbjzw-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                  <div
                    className="css-1k0t96a-Text"
                  >
                    Chapter 1
                  </div>
                </div>
              </div>
              <div
                className="css-fcpgnv-TableOfContentsEntry"
              >
                <div
                  className="toc-entry css-12opz0x-TableOfContentsEntry"
                >
                  <div
                    className="css-1ldtu9f-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                    onClick={[Function]}
                  />
                  <div
                    className="toc-entry-text css-x4fs04-TableOfContentsEntry"
                    onClick={[Function]}
                  >
                    <div
                      className="css-scbjzw-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1k0t96a-Text"
                    >
                      Article 1
                    </div>
                  </div>
                </div>
                <div
                  className="toc-entry css-12opz0x-TableOfContentsEntry"
                >
                  <div
                    className="css-1ldtu9f-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                    onClick={[Function]}
                  />
                  <div
                    className="toc-entry-text css-x4fs04-TableOfContentsEntry"
                    onClick={[Function]}
                  >
                    <div
                      className="css-scbjzw-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1k0t96a-Text"
                    >
                      Article 2
                    </div>
                  </div>
                </div>
                <div
                  className="toc-entry css-12opz0x-TableOfContentsEntry"
                >
                  <div
                    className="css-1ldtu9f-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                    onClick={[Function]}
                  />
                  <div
                    className="toc-entry-text css-x4fs04-TableOfContentsEntry"
                    onClick={[Function]}
                  >
                    <div
                      className="css-scbjzw-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    <div
                      className="css-1k0t96a-Text"
                    >
                      Article 3
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="card-footer css-105jaxv-CardFooter"
        >
          <button
            className="css-mdrh0d-Button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-95j2hm-Button"
            >
              <div
                className="css-kuxry5-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              reference_books__add_new_article
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-17ma33b-Card"
      >
        <div
          className="card-header css-13nbzsf-CardHeader"
        >
          <div
            className="css-xkg24y-ReferenceBookArticleDetail"
          >
            <div
              className="css-1lrzij5-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
            <div
              className="css-1i6jmor-Heading"
            >
              Begriff
            </div>
          </div>
          <div
            className="css-xuxv3c-ReferenceBookArticleDetail"
          >
            <button
              className="css-1cywa3f-Button"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="css-95j2hm-Button"
              >
                <div
                  className="css-mj8vo1-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </button>
            <div
              className="css-17bom2c-OrlyButton"
            >
              <button
                className="css-hnekdl-Button"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="css-95j2hm-Button"
                >
                  <div
                    className="css-mj8vo1-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          className="css-d9831g-ReferenceBookArticleDetail"
        >
          <div
            className="css-1mcq4xf-Label"
          >
            title
            <div
              className="css-nhflpf-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
          <div
            className="css-1m6dag8-InlineEditableHeader"
          >
            <div>
              <form
                className="css-1c5ej61-InlineEditableHeader"
                onBlur={[Function]}
                onSubmit={[Function]}
              >
                <div
                  className="css-pl4s5v-InlineEditableHeader"
                  onClick={[Function]}
                >
                  <div
                    className="css-1iwo50k"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="css-nrul0i"
                    >
                      <input
                        className="css-q6vozw"
                        defaultValue="Begriff"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        readOnly={true}
                        type="text"
                      />
                    </div>
                  </div>
                  <div
                    className="hover-icon css-16vb3lw-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </form>
            </div>
          </div>
          <div
            className="css-mhv4hc-ContentImage"
            data-scroll="sdgqwe.sdfoi"
          >
            <div
              className="image css-11t4thw-ContentImage"
            />
            <div
              className="edit-overlay css-ypqj1e-ReferenceBookImage"
              onClick={[Function]}
            >
              <div
                className="css-1wr1ssb-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
              <div>
                edit__image
              </div>
              <div
                className="css-1806nni-OrlyButton"
              >
                <button
                  className="css-hnekdl-Button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <div
                    className="css-95j2hm-Button"
                  >
                    <div
                      className="css-mj8vo1-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className="css-1pgr9ys-Card"
            onClick={[Function]}
          >
            <div
              className="card-header css-1pveb3d-CardHeader"
            >
              <div
                className="css-cbsis8-CreationBar"
              >
                <div
                  className="css-1lrzij5-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-1f6p2vj-Heading"
                >
                  reference_books__creation_bar_title
                </div>
              </div>
              <button
                className="css-1cywa3f-Button"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="css-95j2hm-Button"
                >
                  <div
                    className="css-mj8vo1-Icon"
                    dangerouslySetInnerHTML={
                      {
                        "__html": {},
                      }
                    }
                  />
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="bottom-action-bar css-1004l4i-ContentBottomActionbar"
  >
    <div
      className="css-1sy51zr-ReferenceBookDetailFooter"
    >
      <div>
        <div
          className="css-ttw7rt-ReferenceBookDetailFooter"
        >
          <div
            className="css-1lrzij5-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
          <div
            className="css-111vsyq-Text"
          >
            21.07.2020
          </div>
          <div
            className="css-1lrzij5-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
          />
          <div
            className="css-fmthw-Text"
          >
            First Last
          </div>
        </div>
      </div>
      <button
        className="css-injsqh-Button"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="css-95j2hm-Button"
        >
          preview
        </div>
      </button>
    </div>
  </div>
</div>
`;
